[Fix] Changed grid align-self to start (default position)

--- a/client/src/components/Layout/index.module.css
+++ b/client/src/components/Layout/index.module.css
@@ -21,7 +21,7 @@
 
 .Layout > main {
     grid-area: main;
-    align-self: center;
+    align-self: start;
     justify-self: center;
 }
 
